<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>The teleop package</description>

  <maintainer email="sverschu@student.codam.nl">stan</maintainer>
  <license>TODO</license>

  <!-- dependencies from ros-keyboard -->
  <build_depend>sdl</build_depend>
  <build_depend>ruby</build_depend>
  <run_depend>sdl</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>llc_messages</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>llc_messages</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>llc_messages</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
